--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,52 @@
  *= require_self
  *= require_tree .
  */
+
+body {
+  background: url('/assets/matrix.png');
+}
+
+h1,li,label {
+  font-family:helvetica;
+}
+h1,label {
+  color:#7FFF00;
+  font-weight:bold;
+}
+
+h1 {
+  font-size:90px;
+}
+body {
+  text-align: center;
+  animation: fadein 2s;
+  -webkit-animation: fadein 2s; /* Safari and Chrome */
+}
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+li {
+  color:yellow;
+  font-size:20px;
+  list-style-type:none;
+}
+
+label {
+  font-size: 20px;
+}
