--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -1,3 +1,17 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+body {
+	color: red;
+	font-size:25px;
+	
+}
+
+h1 {
+	color: red;
+}
+li {
+	color: red;
+}
