--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h1>Shuffler</h1>
 
 <ul>
@@ -7,9 +8,10 @@
 </ul>
 <label>Number of students</label>
 <select>
-  
+
   <% @students.count.times do |x| %>
     <option value="<%=x+1%>"><%=x+1%></option>
   <% end %>
 </select>
 <button>Go</button>
+</div>
